# gaia

./: .bandit-baseline.json  .codecov.yml  .env.example  .gitattributes  .gitignore  .pylintrc  .security-suppressions.json  AGENTS.md  B3-C-IMPLEMENTATION-BLUEPRINT.md  B3-C-IMPLEMENTATION-COMPLETE.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION-STATUS-REPORT-pipeline-orchestration.md  IMPLEMENTATION_PLAN_ISSUE_1041.md  IMPLEMENTATION_SUMMARY_ISSUE_1041.md  MANIFEST.in  MERGE_DECISION_pipeline-orchestration-v1.md  PIPELINE_STATUS_REPORT.md  PR_DESCRIPTION.md  PR_RESPONSE_TO_KALIN.md  README.md  REVIEW.md  SD_CI_COVERAGE.md  SD_CLEANUP_PLAN.md  SECURITY.md  SIXEL_SETUP.md  build_exe.bat  component-framework-implementation-report.md  context7.json  create_issues_and_branches.py  docs-branch-matrix-outstanding-issues-analysis.md  future-where-to-resume-left-off.md  hook-lemonade.py  hook-turnkeyml.py  hook-turnkeyml_submodules.py  implementation-plan-ARCH-2-capability-migration.md  implementation-plan-B3-C-agent-ui-pipeline.md  lint.bat  package-lock.json  package.json  (+33 more)
Datalin/: bot.py  (+4 more)
cpp/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
cpp/agents/: README.md
cpp/agents/bash/: api_server.cpp  api_server.h  bash_agent.cpp  bash_agent.h  bash_tools.cpp  bash_tools.h  gaia-agent.yaml  main.cpp  mcp_server.cpp  mcp_server.h
cpp/agents/bash/eval/: bash_eval_adapter.py  bash_ground_truth.json  bash_scenarios.json
cpp/agents/health/: gaia-agent.yaml
cpp/agents/process/: gaia-agent.yaml
cpp/agents/security-demo/: gaia-agent.yaml
cpp/agents/vlm/: gaia-agent.yaml
cpp/agents/wifi/: gaia-agent.yaml
cpp/benchmarks/: bench_main.cpp  bench_utils.h  mock_llm_server.h
cpp/build_ssl/include/gaia/: export.h
cpp/cmake/: gaia_coreConfig.cmake.in  vcpkg-auto-setup.cmake
cpp/examples/: health_agent.cpp  pc_health_agent.cpp  process_agent.cpp  secure_agent.cpp  security_demo.cpp  simple_agent.cpp  svc_helper.cpp  vlm_agent.cpp  wifi_agent.cpp
cpp/examples/fetch_content_consumer/: CMakeLists.txt  main.cpp
cpp/include/gaia/: agent.h  clean_console.h  console.h  file_tools.h  git_tools.h  json_event_handler.h  json_utils.h  lemonade_client.h  mcp_client.h  process.h  repl.h  security.h  session.h  sse_parser.h  tool_registry.h  tui_console.h  types.h
cpp/packaging/: package_agents.py
cpp/src/: agent.cpp  clean_console.cpp  console.cpp  file_tools.cpp  git_tools.cpp  image.cpp  json_event_handler.cpp  json_utils.cpp  lemonade_client.cpp  mcp_client.cpp  process.cpp  repl.cpp  security.cpp  session.cpp  sse_parser.cpp  tool_registry.cpp  tui_console.cpp  tui_markdown.cpp  types.cpp
cpp/tests/: test_agent.cpp  test_clean_console.cpp  test_console.cpp  test_decision.cpp  test_file_tools.cpp  test_git_tools.cpp  test_image.cpp  test_json_event_handler.cpp  test_json_utils.cpp  test_lemonade_client.cpp  test_mcp_client.cpp  test_process.cpp  test_repl.cpp  test_security.cpp  test_session.cpp  test_sse_parser.cpp  test_tool_integration.cpp  test_tool_registry.cpp  test_tui_console.cpp  test_types.cpp
cpp/tests/integration/: test_integration_health.cpp  test_integration_llm.cpp  test_integration_mcp.cpp  test_integration_vlm.cpp  test_integration_wifi.cpp  test_main.cpp
cpp/tests/support/: mock_llm_server.h
cpp/triplets/: arm64-osx-static.cmake  x64-linux-static.cmake
gaia-inbox-zero-agent/: .env.example  .gitignore  README.md  pyproject.toml
gaia-inbox-zero-agent/automations/: inbox-zero-helper.yaml
gaia-inbox-zero-agent/gaia_inbox_zero/: __init__.py
gaia-inbox-zero-agent/gaia_inbox_zero/agent/: __init__.py  classifiers.py  config.py  inbox_zero.py
gaia-inbox-zero-agent/gaia_inbox_zero/cli/: __init__.py  batch_classifier.py
gaia-inbox-zero-agent/gaia_inbox_zero/data/: __init__.py  email_loader.py
gaia-inbox-zero-agent/gaia_inbox_zero/schema/: __init__.py  result_schema.py
gaia-inbox-zero-agent/tests/: __init__.py  test_batch_classifier.py  test_email_loader.py  test_inbox_zero_agent.py  test_result_schema.py
hub/agents/chat/python/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/chat/python/gaia_agent_chat/: __init__.py  agent.py  app.py  lite_agent.py  profiles.py
hub/agents/chat/python/packaging/: stamp_version.py
hub/agents/chat/python/tests/: test_chat_agent.py  test_chat_dependency_floor.py  test_dependency_floor.py
hub/agents/code/python/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/code/python/gaia_agent_code/: __init__.py  agent.py
hub/agents/code/python/tests/: test_code_agent_mixins.py  test_code_validators.py
hub/agents/connectors-demo/python/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/connectors-demo/python/gaia_agent_connectors_demo/: agent.py
hub/agents/connectors-demo/python/tests/: test_connectors_demo.py
hub/agents/emr/python/: README.md  pyproject.toml
hub/agents/emr/python/gaia_agent_emr/: __init__.py  agent.py  cli.py
hub/agents/fileio/python/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/fileio/python/gaia_agent_fileio/: __init__.py
hub/agents/python/analyst/: README.md  pyproject.toml
hub/agents/python/analyst/gaia_agent_analyst/: agent.py
hub/agents/python/blender/: README.md  pyproject.toml
hub/agents/python/browser/: README.md  pyproject.toml
hub/agents/python/chat/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/python/doc-search/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/python/docker/: README.md  pyproject.toml
hub/agents/python/docqa/: README.md  pyproject.toml
hub/agents/python/email/: CAPABILITY_MATRIX.md  CONTRACT.md  README.md  email-spec-v2.0.html  gaia-agent.yaml  openapi.email.json  pyproject.toml  specification.html
hub/agents/python/emr/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/python/hello-world/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/python/routing/: README.md  pyproject.toml
hub/agents/python/sd/: README.md  gaia-agent.yaml  pyproject.toml
hub/agents/python/summarize/: README.md  pyproject.toml
hub/agents/python/word-count/: README.md  gaia-agent.yaml  pyproject.toml
(+4998 files in other folders)
