[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gaia-inbox-zero"
version = "2.1.0"
description = "GAIA Inbox Zero Agent - Email triage, categorization, and inbox management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenClaw Team"},
]
keywords = ["email", "inbox-zero", "gaia", "agent", "classification", "mbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
gaia = ["gaia-agents>=1.0.0"]
test = ["pytest>=7.0", "pytest-cov"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
inbox-zero-classify = "gaia_inbox_zero.cli.batch_classifier:main"

[project.entry-points."gaia.agents"]
inbox-zero = "gaia_inbox_zero.agent.inbox_zero:InboxZeroAgent"

[tool.setuptools.packages.find]
include = ["gaia_inbox_zero*"]

[tool.setuptools.package-data]
gaia_inbox_zero = ["automations/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
