[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent-emr"
version = "0.1.0"
description = "GAIA EMR agent — VLM medical intake form extraction"
authors = [{ name = "AMD" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["amd-gaia[api]>=0.20.0"]

[project.scripts]
gaia-emr = "gaia_agent_emr.cli:main"

[project.entry-points."gaia.agent"]
emr = "gaia_agent_emr:build_registration"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["gaia_agent_emr*"]
