[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent-email"
version = "0.1.0"
description = "GAIA email triage agent — read, triage, organize, and reply to Gmail/Outlook locally"
authors = [{ name = "AMD" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["amd-gaia>=0.20.0"]

[project.entry-points."gaia.agent"]
email = "gaia_agent_email:build_registration"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["gaia_agent_email*"]
