[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent-email"
version = "0.2.0"
description = "GAIA email triage agent — read, triage, organize, and reply to Gmail/Outlook locally"
authors = [{ name = "AMD" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
# Depend on the [api] extra (not bare amd-gaia) so a consuming app's
# `pip install gaia-agent-email` pulls the REST-server deps (fastapi/uvicorn)
# AND keyring automatically — the email REST router's import chain needs keyring
# at module load and at request time (connected_mailbox_providers). Closes the
# "consumer forgot [api]" half of #1617. Raise the floor to >=0.21.0 once that
# release ships keyring-in-[api] for a hard version guarantee.
dependencies = ["amd-gaia[api]>=0.20.0"]

[project.entry-points."gaia.agent"]
email = "gaia_agent_email:build_registration"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["gaia_agent_email*"]
