[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent-email"
version = "0.5.0"
description = "GAIA email triage agent — read, triage, organize, and reply to Gmail/Outlook locally"
authors = [{ name = "AMD" }]
license = { text = "MIT" }
requires-python = ">=3.10"
# Depend on the [api] extra (not bare amd-gaia) so a consuming app's
# `pip install gaia-agent-email` pulls the REST-server deps (fastapi/uvicorn)
# AND keyring automatically — the email REST router's import chain needs keyring
# at module load and at request time (connected_mailbox_providers). Closes the
# "consumer forgot [api]" half of #1617.
# Floor: 0.22.0 is the first core release shipping
# gaia.agents.registry.get_embedding_model_for_device, imported at agent
# start (#2112). tests/test_dependency_floor.py guards this floor.
dependencies = ["amd-gaia[api]>=0.22.0"]

# Agent registration temporarily disabled: with the entry point commented out,
# `AgentRegistry.discover()` no longer surfaces the in-process email agent (it's
# being superseded by the packaged REST sidecar). The package still ships the
# `/v1/email` REST router + Python API — only the chat-agent registration is off.
# Re-enable by uncommenting (and reinstalling the wheel).
# [project.entry-points."gaia.agent"]
# email = "gaia_agent_email:build_registration"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["gaia_agent_email*"]
