[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent-emr"
version = "0.1.0"
description = "GAIA Medical Intake agent — medical form intake and extraction (VLM)"
authors = [{ name = "AMD" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["amd-gaia>=0.20.0"]

[project.scripts]
gaia-emr = "gaia_agent_emr.cli:main"

[project.entry-points."gaia.agent"]
emr = "gaia_agent_emr:build_registration"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gaia_agent_emr*"]

[tool.setuptools.package-data]
"gaia_agent_emr" = ["dashboard/**/*"]
