[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent-hello-world"
version = "0.1.0"
description = "GAIA Hello World agent — minimal conversational reference implementation"
authors = [{ name = "AMD" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
# [api] makes this runnable as a standalone REST/MCP sidecar (pulls fastapi/uvicorn;
# the stdio MCP server is built-in and keyring is core). Mirrors the email agent's
# packaging so the api_server/mcp_server interfaces in gaia-agent.yaml work on a bare install.
dependencies = ["amd-gaia[api]>=0.20.0"]

[project.entry-points."gaia.agent"]
hello-world = "gaia_agent_hello_world:build_registration"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["gaia_agent_hello_world*"]
