[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent-summarize"
version = "0.1.0"
description = "GAIA Summarizer agent — document and text summarization"
authors = [{ name = "AMD" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["amd-gaia[rag]>=0.20.0"]

[project.entry-points."gaia.agent"]
summarize = "gaia_agent_summarize:build_registration"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["gaia_agent_summarize*"]
